[gd_scene load_steps=8 format=3 uid="uid://c0ujo7raol74o"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_bvujv"]
[ext_resource type="Texture2D" uid="uid://bdtdj0ci7pivl" path="res://sprites/spritesheet.png" id="2_2nrx1"]
[ext_resource type="Script" path="res://scripts/ItemDrop.gd" id="3_0lf62"]
[ext_resource type="Script" path="res://scripts/DropTable.gd" id="3_vfv4k"]
[ext_resource type="Resource" uid="uid://bqmoq80j5den7" path="res://resources/items/burger/lettuce.tres" id="4_n6oca"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7vev"]
size = Vector2(6, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_kbysg"]
radius = 6.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 12
motion_mode = 1
script = ExtResource("1_bvujv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_w7vev")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2nrx1")
region_enabled = true
region_rect = Rect2(8, 0, 8, 8)

[node name="ShootTimer" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -2)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kbysg")

[node name="DropTable" type="Node" parent="."]
script = ExtResource("3_vfv4k")

[node name="ItemDrop" type="Node" parent="DropTable"]
script = ExtResource("3_0lf62")
item = ExtResource("4_n6oca")
chance = 0.5

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
